performance : always initialise to start with the correct nb of users